[gd_scene load_steps=5 format=3 uid="uid://c3jm3kl5tuidx"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_ttb0v"]
[ext_resource type="FontFile" uid="uid://de6pegnsywt8c" path="res://assets/fonts/Xolonium-Regular.ttf" id="2_56jjw"]
[ext_resource type="Texture2D" uid="uid://hekboy21yp1h" path="res://assets/images/coin.png" id="3_gqodx"]
[ext_resource type="Texture2D" uid="uid://bbigypqo17ikx" path="res://assets/images/heart.png" id="4_3t2dq"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ttb0v")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_56jjw")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoinSymbol" type="TextureRect" parent="."]
offset_left = 366.0
offset_top = 17.0
offset_right = 430.0
offset_bottom = 81.0
scale = Vector2(0.572886, 0.572886)
texture = ExtResource("3_gqodx")

[node name="CoinLabel" type="Label" parent="."]
offset_left = 406.0
offset_top = 18.0
offset_right = 471.0
offset_bottom = 57.0
theme_override_fonts/font = ExtResource("2_56jjw")
theme_override_font_sizes/font_size = 32
text = "x0"

[node name="Message" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -39.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_56jjw")
theme_override_font_sizes/font_size = 64
text = "Dodge the creeps!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.5
offset_top = -140.0
offset_right = 111.5
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_56jjw")
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HeartSymbol" type="TextureRect" parent="."]
offset_left = 20.0
offset_top = 17.0
offset_right = 60.0
offset_bottom = 57.0
size_flags_horizontal = 0
texture = ExtResource("4_3t2dq")

[node name="HeartLabel" type="Label" parent="."]
offset_left = 63.0
offset_top = 18.0
offset_right = 128.0
offset_bottom = 57.0
theme_override_fonts/font = ExtResource("2_56jjw")
theme_override_font_sizes/font_size = 32
text = "x0"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
